Add some files to be ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
- TestCases/.pytest_cache
- Utilities/__pycache__
- TestCases/.pytest_cache
- PageObjects/__pycache__
- .pytest_cache
+__pycache__/
+*.py[cod]
